docs: update resume

--- a/resume.tex
+++ b/resume.tex
@@ -24,17 +24,17 @@ with various backend and frontend tools, including Node.js, Express.js, Spring B
 Native and Next.js. Now, I am currently seeking opportunities to further develop my skills and contribute to
 innovative projects within the tech industry.
 \section{Experience}
-\textbf{Insider. \textit{(Istanbul, Türkiye)}} \hfill Remote\\
+\textbf{\href{https://useinsider.com}{Insider}. \textit{(Istanbul, Türkiye)}} \hfill Remote\\
 \textit{Software Developer} \hfill July 2025 -- Present
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
     \item I have joined Insider as a Software Developer.
 \end{itemize}
-\textbf{JotForm \textit{(Ankara, Türkiye)}} \hfill Remote\\
+\textbf{\href{https://jotform.com}{JotForm}. \textit{(Ankara, Türkiye)}} \hfill Remote\\
 \textit{Summer Intern} \hfill August 2023 -- September 2023
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
     \item Development of a revision history system for their product, Jotform Approvals, with my team, Jr. Source, as an internship project using Node.js, React.js, SCSS, PHP, and MySQL.
 \end{itemize}
-\textbf{Üstünova Engineering \textit{(Ankara, Türkiye)}} \hfill Ankara, Türkiye\\
+\textbf{\href{https://www.ustunova.com.tr}{Üstünova Engineering}. \textit{(Ankara, Türkiye)}} \hfill Ankara, Türkiye\\
 \textit{Summer Intern} \hfill July 2023 -- August 2023
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
     \item Frontend development of a dashboard and a control panel for an EV charging station software, Electr-INN, using Next.js, Node.js, and Django.
@@ -48,6 +48,8 @@ innovative projects within the tech industry.
 \section{Education}
 \textbf{Konya Technical University} \hfill Konya, Türkiye\\
 \textit{B.Sc. in Computer Engineering} \hfill September 2022 -- June 2026\\
+\textbf{Konya Technical University} \hfill Konya, Türkiye\\
+\textit{B.Sc. in Electrical and Electronics Engineering} \hfill September 2020 -- June 2022 (Undergraduate Transfer)\\
 \section{Scholarships}
 \textbf{TÜBİTAK} \hfill Türkiye\\
 \textit{Scholarship Holder, Researcher} \hfill April 2023 -- October 2023
