docs: update experience

--- a/resume.tex
+++ b/resume.tex
@@ -27,7 +27,10 @@ innovative projects within the tech industry.
 \textbf{\href{https://useinsider.com}{Insider}. \textit{(Istanbul, Türkiye)}} \hfill Remote\\
 \textit{Software Developer} \hfill July 2025 -- Present
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-    \item I have joined Insider as a Software Developer.
+    \item I am responsible for Optimus task development and actively contribute to system development efforts
+    \item I conduct code reviews and provide essential support for tasks that are outsourced
+    \item Continuous personal development is a key aspect of my role
+    \item I provide buddy support to colleagues and ensure follow-up on the Kanban board to maintain workflow efficiency
 \end{itemize}
 \textbf{\href{https://jotform.com}{JotForm}. \textit{(Ankara, Türkiye)}} \hfill Remote\\
 \textit{Summer Intern} \hfill August 2023 -- September 2023
