--- a/resume.tex
+++ b/resume.tex
@@ -11,11 +11,10 @@
 \begin{center}
     \begin{minipage}{\textwidth}
         \centering
-        {\LARGE\textbf{Onur Ravli}} \hspace{2pt} {\LARGE{Full-Stack Developer}}\\[10pt]
-        \href{mailto:onur@onurravli.com}{onur@onurravli.com} \textbullet\
-        \href{https://onurravli.com}{onurravli.com} \textbullet\
-        \href{https://linkedin.com/in/onurravli}{linkedin.com/in/onurravli} \textbullet\
-        \href{https://github.com/onurravli}{github.com/onurravli}
+        {\LARGE\textbf{Eyup Bayram}} \hspace{2pt} {\LARGE{Backend Engineer}}\\[10pt]
+        \href{mailto:egorkemb@gmail.com}{egorkemb@gmail.com} \textbullet\
+        \href{https://linkedin.com/in/egbayram}{linkedin.com/in/egbayram} \textbullet\
+        \href{https://github.com/egbay}{github.com/egbay}
     \end{minipage}
 \end{center}
 \section{Summary}
