--- a/resume.tex
+++ b/resume.tex
@@ -5,57 +5,96 @@
 \usepackage{titlesec}
 \usepackage{enumitem}
 \usepackage{graphicx}
+
 \titleformat{\section}{\large\bfseries\scshape\raggedright}{}{0em}{}[\titlerule]
 \titlespacing*{\section}{0pt}{12pt}{8pt}
+
 \begin{document}
+
 \begin{center}
-    \begin{minipage}{\textwidth}
-        \centering
-        {\LARGE\textbf{Eyup Bayram}} \hspace{2pt} {\LARGE{Backend Engineer}}\\[10pt]
-        \href{mailto:egorkemb@gmail.com}{egorkemb@gmail.com} \textbullet\
-        \href{https://linkedin.com/in/egbayram}{linkedin.com/in/egbayram} \textbullet\
-        \href{https://github.com/egbay}{github.com/egbay}
-    \end{minipage}
+  \begin{minipage}{\textwidth}
+    \centering
+    {\LARGE\textbf{Eyup Bayram}} \hspace{2pt} {\LARGE Backend Engineer}\\[8pt]
+    Umraniye, Istanbul \textbullet\ 
+    \href{mailto:egorkemb@gmail.com}{egorkemb@gmail.com} \textbullet\
+    +90 505 554 84 58 \textbullet\
+    \href{https://linkedin.com/in/egbayram}{linkedin.com/in/egbayram} \textbullet\
+    \href{https://github.com/egbay}{github.com/egbay}
+  \end{minipage}
 \end{center}
+
 \section{Summary}
-I am experienced in full-stack development with proficiency in TypeScript, Python, and Java. I have worked
-with various backend and frontend tools, including Node.js, Express.js, Spring Boot, Django, React.js, React
-Native and Next.js. Now, I am currently seeking opportunities to further develop my skills and contribute to
-innovative projects within the tech industry.
+Backend-heavy software engineer (7+ yrs) focused on AI products and cloud-native architectures with hands-on backend experience (Python/FastAPI, Node/NestJS, PostgreSQL). Designed reliable billing pipelines and low-latency APIs on AWS/Lambda/edge, with strong focus on observability and safe rollouts. Looking to drive platform reliability and developer velocity in a backend/platform role. Passionate about leveraging technology to solve real-world problems and contribute to impactful projects.
+
 \section{Experience}
-\textbf{\href{https://useinsider.com}{Insider}. \textit{(Istanbul, Türkiye)}} \hfill Remote\\
-\textit{Software Developer} \hfill July 2025 -- Present
+
+\textbf{Freelancer}. \textit{Backend Engineer} \hfill Jul 2024 -- Present\\
+\textit{Istanbul, Türkiye (Remote)}
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-    \item I am responsible for Optimus task development and actively contribute to system development efforts
-    \item I conduct code reviews and provide essential support for tasks that are outsourced
-    \item Continuous personal development is a key aspect of my role
-    \item I provide buddy support to colleagues and ensure follow-up on the Kanban board to maintain workflow efficiency
+  \item \textbf{Project: Payments \& Billing + Online Learning Platform} --- Modeled DB with Prisma; managed schema migrations and transactions; implemented repository/service layers to ensure data integrity. Stack: NestJS, TypeScript, Prisma, PostgreSQL.
+  \item \textbf{Project: AI Fashion Project} --- Developed REST APIs for model invocations, job management, and status tracking using FastAPI. Integrated Supabase authentication \& storage; enforced signed URLs and access policies. Built async workflows and queuing for long-running jobs. Deployed on GCP.
+  \item \textbf{Project: Full-Stack Development for Multiple AI Products} --- Defined service boundaries, API contracts, and inter-service communication (HTTP/queues) in a microservice architecture. Used FastAPI, Django, Node.js, TypeScript, Prisma across products. Built event-driven workflows and serverless functions on AWS Lambda. Rapidly shipped UI with Vercel V0 and hardened React components for production.
+  \item \textbf{Key Achievements:}
+    \begin{itemize}[leftmargin=1.2em,noitemsep,topsep=0pt]
+      \item Shipped a modular billing architecture enabling easy addition of new plans and discount rules.
+      \item Increased resilience with idempotency and retry patterns on critical payment operations.
+      \item Implemented RBAC-based authorization with clear customer/teacher/student boundaries.
+      \item Modular job/pipeline design enabled adding new AI variants with minimal changes.
+      \item Established data lifecycle and access policies to protect customer assets.
+      \item Achieved low latency and effortless scaling via serverless and edge patterns; adopted feature flags for safe rollouts.
+    \end{itemize}
 \end{itemize}
-\textbf{\href{https://jotform.com}{JotForm}. \textit{(Ankara, Türkiye)}} \hfill Remote\\
-\textit{Summer Intern} \hfill August 2023 -- September 2023
+
+\textbf{Smartex AI}. \textit{Backend Engineer \& Managing Director} \hfill Sep 2022 -- Jul 2024\\
+\textit{Porto, Portugal}
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-    \item Development of a revision history system for their product, Jotform Approvals, with my team, Jr. Source, as an internship project using Node.js, React.js, SCSS, PHP, and MySQL.
+  \item Led Smartex’s expansion in Türkiye post-acquisition of Tuvis AI, managing budgets, compliance, and resourcing.
+  \item Backend development with Node.js, TypeScript, PostgreSQL, MongoDB, TypeORM, Prisma; key role in migration from TypeORM to Prisma.
+  \item Owned production support: created API endpoints, resolved live bugs, and improved operational stability.
+  \item \textbf{Key Achievements:} Strengthened regional presence and client relations; contributed to efficient backend solutions supporting the company’s \$40M+ funding milestones.
 \end{itemize}
-\textbf{\href{https://www.ustunova.com.tr}{Üstünova Engineering}. \textit{(Ankara, Türkiye)}} \hfill Ankara, Türkiye\\
-\textit{Summer Intern} \hfill July 2023 -- August 2023
+
+\textbf{Tuvis AI}. \textit{Co-Founder \& Software Engineer} \hfill Jul 2018 -- Sep 2022\\
+\textit{Istanbul, Türkiye}
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-    \item Frontend development of a dashboard and a control panel for an EV charging station software, Electr-INN, using Next.js, Node.js, and Django.
+  \item Co-founded and scaled AI-driven anomaly detection solutions for manufacturing process optimization.
+  \item Led a team across project planning, technical implementation, and server management.
+  \item Hands-on backend work with Flask, Django, PostgreSQL, Redis, AWS (S3, EC2, RDS, Lambda, CloudWatch, ECR), GitHub Actions, Celery, RabbitMQ.
+  \item Engaged clients with technical insights; secured multiple R\&D projects funded by TUBITAK, KOSGEB, and Growth Circuit VC.
+  \item \textbf{Key Achievements:} Enabled Tuvis AI acquisition by Smartex.ai (2023); delivered high CSAT and long-term partnerships.
 \end{itemize}
+
+\textbf{Peakode}. \textit{Research \& Development Engineer (Part-Time)} \hfill Sep 2016 -- Jun 2017\\
+\textit{Bursa, Türkiye}
+\begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
+  \item Built IoT solutions with XBee sensor networks, xCTU, Node.js, and Raspberry Pi.
+\end{itemize}
+
+\textbf{TOFAS}. \textit{Research \& Development Engineer (Part-Time)} \hfill Sep 2016 -- Jun 2017\\
+\textit{Bursa, Türkiye}
+\begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
+  \item Conducted CAN Bus analysis and contributed to Instrument Cluster Panel development for an EV prototype using C++ and GLStudio.
+  \item Awarded ``Best R\&D Project'' within TOFAS.
+\end{itemize}
+
+\section{Education \& Certifications}
+\textbf{Kocaeli University} \hfill Kocaeli, Türkiye\\
+\textit{M.Sc. in Computer Engineering} \hfill Jan 2019 -- Thesis Stage\\[4pt]
+\textbf{Emerald Cultural Institute} \hfill Dublin, Ireland\\
+\textit{Academic English Program (IELTS 6.5)} \hfill Oct 2017 -- Jun 2018\\[4pt]
+\textbf{Uludag University} \hfill Bursa, Türkiye\\
+\textit{B.Sc. in Electrical \& Electronics Engineering} \hfill Sep 2013 -- Jun 2017\\[6pt]
+\textbf{IELTS Academic (6.5)} \hfill Feb 2018
+
 \section{Skills}
-\textbf{Programming Languages:} TypeScript, Python, Java\\
-\textbf{Backend Frameworks \& Runtimes:} Node.js, Express.js, Nest.js, Django, Spring Boot\\
-\textbf{Frontend Frameworks \& Runtimes:} React.js, React Native, Next.js\\
-\textbf{Databases:} MongoDB, PostgreSQL, MySQL, Redis\\
-\textbf{Other:} Git, RestAPI, GraphQL, Docker, Docker Compose, Amazon EC2, Amazon Lambda, Joi, Axios, Jest, Postman, Swagger
-\section{Education}
-\textbf{Konya Technical University} \hfill Konya, Türkiye\\
-\textit{B.Sc. in Computer Engineering} \hfill September 2022 -- June 2026\\
-\textbf{Konya Technical University} \hfill Konya, Türkiye\\
-\textit{B.Sc. in Electrical and Electronics Engineering} \hfill September 2013 -- June 2022 (Undergraduate Transfer)\\
-\section{Scholarships}
-\textbf{TÜBİTAK} \hfill Türkiye\\
-\textit{Scholarship Holder, Researcher} \hfill April 2023 -- October 2023
-\begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-    \item I was one of the student scholar holders with Explosive Circuit Detection from X-Ray Images Using Ensemble and Deep Learning Techniques Project in TÜBİTAK BİÇABA Scholarship Program.
-\end{itemize}
+\textbf{Languages:} Python, JavaScript/TypeScript\\
+\textbf{Databases:} MySQL, PostgreSQL, MongoDB\\
+\textbf{Frameworks:} Flask, FastAPI, Django, Node.js, NestJS, Prisma, TypeORM\\
+\textbf{Cloud/Tech:} Serverless Framework, AWS (S3, SNS, EC2, API Gateway, Lambda, RDS, CodeCommit, CloudWatch)\\
+\textbf{Other:} Celery, Redis, RabbitMQ, GitHub Actions, Sentry, CAN Bus\\
+\textbf{Language Proficiency:} English (IELTS 6.5)
+
+\section{Volunteer}
+Co-founded the IEEE Bursa Uludag University Student Branch; organized events, workshops, and technical trainings to help students build leadership and engineering skills.
+
 \end{document}
