--- a/resume.tex
+++ b/resume.tex
@@ -24,58 +24,49 @@
 \end{center}
 
 \section{Summary}
-Backend-heavy software engineer (7+ yrs) focused on AI products and cloud-native architectures with hands-on backend experience (Python/FastAPI, Node/NestJS, PostgreSQL). Designed reliable billing pipelines and low-latency APIs on AWS/Lambda/edge, with strong focus on observability and safe rollouts. Looking to drive platform reliability and developer velocity in a backend/platform role. Passionate about leveraging technology to solve real-world problems and contribute to impactful projects.
+Backend-heavy software engineer (7+ yrs) focused on AI products, and cloud-native architectures with hands-on backend experience (Python/FastAPI, Node/NestJS, PostgreSQL). Designed reliable billing pipelines and low-latency APIs on AWS Lambda. Looking to drive platform reliability and developer velocity in a backend role. Passionate about leveraging technology to solve real-world problems and contribute to impactful projects. 
 
 \section{Experience}
-
-\textbf{Freelancer}. \textit{Backend Engineer} \hfill Jul 2024 -- Present\\
-\textit{Istanbul, Türkiye (Remote)}
+\textbf{\href{https://linkedin.com/in/egbayram}{Freelancer} \textit{(Istanbul, Türkiye)}} \hfill Remote\\
+\textit{Software Engineer} \hfill July 2024 -- Present
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-  \item \textbf{Project: Payments \& Billing + Online Learning Platform} --- Modeled DB with Prisma; managed schema migrations and transactions; implemented repository/service layers to ensure data integrity. Stack: NestJS, TypeScript, Prisma, PostgreSQL.
-  \item \textbf{Project: AI Fashion Project} --- Developed REST APIs for model invocations, job management, and status tracking using FastAPI. Integrated Supabase authentication \& storage; enforced signed URLs and access policies. Built async workflows and queuing for long-running jobs. Deployed on GCP.
-  \item \textbf{Project: Full-Stack Development for Multiple AI Products} --- Defined service boundaries, API contracts, and inter-service communication (HTTP/queues) in a microservice architecture. Used FastAPI, Django, Node.js, TypeScript, Prisma across products. Built event-driven workflows and serverless functions on AWS Lambda. Rapidly shipped UI with Vercel V0 and hardened React components for production.
-  \item \textbf{Key Achievements:}
-    \begin{itemize}[leftmargin=1.2em,noitemsep,topsep=0pt]
-      \item Shipped a modular billing architecture enabling easy addition of new plans and discount rules.
-      \item Increased resilience with idempotency and retry patterns on critical payment operations.
-      \item Implemented RBAC-based authorization with clear customer/teacher/student boundaries.
-      \item Modular job/pipeline design enabled adding new AI variants with minimal changes.
-      \item Established data lifecycle and access policies to protect customer assets.
-      \item Achieved low latency and effortless scaling via serverless and edge patterns; adopted feature flags for safe rollouts.
-    \end{itemize}
+    \item \textbf{Project: Payments \& Billing + Online Learning Platform} --- Modeled DB with Prisma; managed schema migrations and transactions; implemented repository/service layers to ensure data integrity. Stack: NestJS, TypeScript, Prisma, PostgreSQL.
+    \item \textbf{Project: AI Fashion Project} --- Developed REST APIs for model invocations, job management, and status tracking using FastAPI. Integrated Supabase authentication \& storage; enforced signed URLs and access policies. Built async workflows and queuing for long-running jobs. Deployed on GCP.
+    \item \textbf{Project: Full-Stack Development for Multiple AI Products} --- Defined service boundaries, API contracts, and inter-service communication (HTTP/queues) in a microservice architecture. Used FastAPI, Django, Node.js, TypeScript, Prisma across products. Built event-driven workflows and serverless functions on AWS Lambda. Rapidly shipped UI with Vercel V0 and hardened React components for production.
 \end{itemize}
 
-\textbf{Smartex AI}. \textit{Backend Engineer \& Managing Director} \hfill Sep 2022 -- Jul 2024\\
-\textit{Porto, Portugal}
+
+\textbf{\href{https://smartex.ai}{Smartex AI}. \textit{(Porto/Istanbul, Portugal/Türkiye)}} \hfill Remote\\
+\textit{Backend Engineer & Managing Director} \hfill September 2022 --  July 2024
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-  \item Led Smartex’s expansion in Türkiye post-acquisition of Tuvis AI, managing budgets, compliance, and resourcing.
-  \item Backend development with Node.js, TypeScript, PostgreSQL, MongoDB, TypeORM, Prisma; key role in migration from TypeORM to Prisma.
-  \item Owned production support: created API endpoints, resolved live bugs, and improved operational stability.
-  \item \textbf{Key Achievements:} Strengthened regional presence and client relations; contributed to efficient backend solutions supporting the company’s \$40M+ funding milestones.
+    \item Led Smartex’s expansion in Türkiye post-acquisition of Tuvis AI, managing budgets, compliance, and resourcing.
+    \item Backend development with Node.js, TypeScript, PostgreSQL, MongoDB, TypeORM, Prisma; key role in migration from TypeORM to Prisma.
+    \item Owned production support: created API endpoints, resolved live bugs, and improved operational stability.
 \end{itemize}
 
-\textbf{Tuvis AI}. \textit{Co-Founder \& Software Engineer} \hfill Jul 2018 -- Sep 2022\\
-\textit{Istanbul, Türkiye}
+
+\textbf{\href{https://www.tuvisai.com}{Tuvis AI}. \textit{(Istanbul, Türkiye)}} \hfill Istanbul, Türkiye\\
+\textit{Co-Founder \& Software Engineer} \hfill July 2018 -- September 2022
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-  \item Co-founded and scaled AI-driven anomaly detection solutions for manufacturing process optimization.
-  \item Led a team across project planning, technical implementation, and server management.
-  \item Hands-on backend work with Flask, Django, PostgreSQL, Redis, AWS (S3, EC2, RDS, Lambda, CloudWatch, ECR), GitHub Actions, Celery, RabbitMQ.
-  \item Engaged clients with technical insights; secured multiple R\&D projects funded by TUBITAK, KOSGEB, and Growth Circuit VC.
-  \item \textbf{Key Achievements:} Enabled Tuvis AI acquisition by Smartex.ai (2023); delivered high CSAT and long-term partnerships.
+    \item Co-founded and scaled AI-driven anomaly detection solutions for manufacturing process optimization.
+    \item Led a team across project planning, technical implementation, and server management.
+    \item Hands-on backend work with Flask, Django, PostgreSQL, Redis, AWS (S3, EC2, RDS, Lambda, CloudWatch, ECR), GitHub Actions, Celery, RabbitMQ.
+    \item Engaged clients with technical insights; secured multiple R\&D projects funded by TUBITAK, KOSGEB, and Growth Circuit VC.
 \end{itemize}
 
-\textbf{Peakode}. \textit{Research \& Development Engineer (Part-Time)} \hfill Sep 2016 -- Jun 2017\\
-\textit{Bursa, Türkiye}
+\textbf{\href{https://www.peakode.com}{Peakode}. \textit{(Bursa, Türkiye)}} \hfill Bursa, Türkiye\\
+\textit{Research \& Development Engineer} \hfill September 2016 -- June 2017
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-  \item Built IoT solutions with XBee sensor networks, xCTU, Node.js, and Raspberry Pi.
+    \item Built IoT solutions with XBee sensor networks, xCTU, Node.js, and Raspberry Pi.
 \end{itemize}
 
-\textbf{TOFAS}. \textit{Research \& Development Engineer (Part-Time)} \hfill Sep 2016 -- Jun 2017\\
-\textit{Bursa, Türkiye}
+\textbf{\href{https://www.tofas.com.tr}{TOFAS}. \textit{(Bursa, Türkiye)}} \hfill Bursa, Türkiye\\
+\textit{Research \& Development Engineer} \hfill September 2016 -- June 2017
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-  \item Conducted CAN Bus analysis and contributed to Instrument Cluster Panel development for an EV prototype using C++ and GLStudio.
-  \item Awarded ``Best R\&D Project'' within TOFAS.
+    \item Conducted CAN Bus analysis and contributed to Instrument Cluster Panel development for an EV prototype using C++ and GLStudio.
+    \item Awarded ``Best R\&D Project'' within TOFAS.
 \end{itemize}
+
 
 \section{Education \& Certifications}
 \textbf{Kocaeli University} \hfill Kocaeli, Türkiye\\
@@ -84,7 +75,7 @@ Backend-heavy software engineer (7+ yrs) focused on AI products and cloud-native
 \textit{Academic English Program (IELTS 6.5)} \hfill Oct 2017 -- Jun 2018\\[4pt]
 \textbf{Uludag University} \hfill Bursa, Türkiye\\
 \textit{B.Sc. in Electrical \& Electronics Engineering} \hfill Sep 2013 -- Jun 2017\\[6pt]
-\textbf{IELTS Academic (6.5)} \hfill Feb 2018
+
 
 \section{Skills}
 \textbf{Languages:} Python, JavaScript/TypeScript\\
