--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,7 @@ Backend-heavy software engineer (7+ yrs) focused on AI products, and cloud-nativ
 
 
 \textbf{\href{https://smartex.ai}{Smartex AI}. \textit{(Porto/Istanbul, Portugal/Türkiye)}} \hfill Remote\\
-\textit{Backend Engineer & Managing Director} \hfill September 2022 --  July 2024
+\textit{Backend Engineer \& Managing Director} \hfill September 2022 --  July 2024
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
     \item Led Smartex’s expansion in Türkiye post-acquisition of Tuvis AI, managing budgets, compliance, and resourcing.
     \item Backend development with Node.js, TypeScript, PostgreSQL, MongoDB, TypeORM, Prisma; key role in migration from TypeORM to Prisma.
