--- a/resume.tex
+++ b/resume.tex
@@ -30,13 +30,13 @@ Backend-heavy software engineer (7+ yrs) focused on AI products, and cloud-nativ
 \textbf{\href{https://linkedin.com/in/egbayram}{Freelancer} \textit{(Istanbul, Türkiye)}} \hfill Remote\\
 \textit{Software Engineer} \hfill July 2024 -- Present
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-    \item \textbf{Project: Payments \& Billing + Online Learning Platform} --- Modeled DB with Prisma; managed schema migrations and transactions; implemented repository/service layers to ensure data integrity. Stack: NestJS, TypeScript, Prisma, PostgreSQL.
-    \item \textbf{Project: AI Fashion Project} --- Developed REST APIs for model invocations, job management, and status tracking using FastAPI. Integrated Supabase authentication \& storage; enforced signed URLs and access policies. Built async workflows and queuing for long-running jobs. Deployed on GCP.
-    \item \textbf{Project: Full-Stack Development for Multiple AI Products} --- Defined service boundaries, API contracts, and inter-service communication (HTTP/queues) in a microservice architecture. Used FastAPI, Django, Node.js, TypeScript, Prisma across products. Built event-driven workflows and serverless functions on AWS Lambda. Rapidly shipped UI with Vercel V0 and hardened React components for production.
+    \item \textbf{Project: Full-Stack Development for Multiple AI Products}: Defined service boundaries, API contracts, and inter-service communication (HTTP/queues) in a microservice architecture. Used FastAPI, Django, Node.js, TypeScript, Prisma across products. Built event-driven workflows and serverless functions on AWS Lambda. Rapidly shipped UI with Vercel V0 and hardened React components for production.
+    \item \textbf{Project: Payment \& Billing + Online Learning Platform}: Modeled DB with Prisma; managed schema migrations and transactions; implemented repository/service layers to ensure data integrity. Stack: NestJS, TypeScript, Prisma, PostgreSQL.
+    \item \textbf{Project: AI Fashion Project}: Developed REST APIs for model invocations, job management, and status tracking using FastAPI. Integrated Supabase authentication \& storage; enforced signed URLs and access policies. Built async workflows and queuing for long-running jobs. Deployed on GCP.
 \end{itemize}
 
 
-\textbf{\href{https://smartex.ai}{Smartex AI}. \textit{(Porto/Istanbul, Portugal/Türkiye)}} \hfill Remote\\
+\textbf{\href{https://smartex.ai}{Smartex AI} \textit{(Porto/Istanbul, Portugal/Türkiye)}} \hfill Remote\\
 \textit{Backend Engineer \& Managing Director} \hfill September 2022 --  July 2024
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
     \item Led Smartex’s expansion in Türkiye post-acquisition of Tuvis AI, managing budgets, compliance, and resourcing.
@@ -45,7 +45,7 @@ Backend-heavy software engineer (7+ yrs) focused on AI products, and cloud-nativ
 \end{itemize}
 
 
-\textbf{\href{https://www.tuvisai.com}{Tuvis AI}. \textit{(Istanbul, Türkiye)}} \hfill Istanbul, Türkiye\\
+\textbf{\href{https://www.tuvisai.com}{Tuvis AI} \textit{(Istanbul, Türkiye)}} \hfill Istanbul, Türkiye\\
 \textit{Co-Founder \& Software Engineer} \hfill July 2018 -- September 2022
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
     \item Co-founded and scaled AI-driven anomaly detection solutions for manufacturing process optimization.
@@ -54,13 +54,13 @@ Backend-heavy software engineer (7+ yrs) focused on AI products, and cloud-nativ
     \item Engaged clients with technical insights; secured multiple R\&D projects funded by TUBITAK, KOSGEB, and Growth Circuit VC.
 \end{itemize}
 
-\textbf{\href{https://www.peakode.com}{Peakode}. \textit{(Bursa, Türkiye)}} \hfill Bursa, Türkiye\\
+\textbf{\href{https://www.peakode.com}{Peakode} \textit{(Bursa, Türkiye)}} \hfill Bursa, Türkiye\\
 \textit{Research \& Development Engineer} \hfill September 2016 -- June 2017
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
     \item Built IoT solutions with XBee sensor networks, xCTU, Node.js, and Raspberry Pi.
 \end{itemize}
 
-\textbf{\href{https://www.tofas.com.tr}{TOFAS}. \textit{(Bursa, Türkiye)}} \hfill Bursa, Türkiye\\
+\textbf{\href{https://www.tofas.com.tr}{TOFAS} \textit{(Bursa, Türkiye)}} \hfill Bursa, Türkiye\\
 \textit{Research \& Development Engineer} \hfill September 2016 -- June 2017
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
     \item Conducted CAN Bus analysis and contributed to Instrument Cluster Panel development for an EV prototype using C++ and GLStudio.
