--- a/resume.tex
+++ b/resume.tex
@@ -30,9 +30,9 @@ Backend-heavy software engineer (7+ yrs) focused on AI products, and cloud-nativ
 \textbf{\href{https://linkedin.com/in/egbayram}{Freelancer} \textit{(Istanbul, Türkiye)}} \hfill Remote\\
 \textit{Software Engineer} \hfill July 2024 -- Present
 \begin{itemize}[leftmargin=*,noitemsep,topsep=0pt]
-    \item \textbf{Full-Stack Development for Multiple AI Products}: Defined service boundaries, API contracts, and inter-service communication (HTTP/queues) in a microservice architecture. Used FastAPI, Django, Node.js, TypeScript, Prisma across products. Built event-driven workflows and serverless functions on AWS Lambda. Rapidly shipped UI with Vercel V0 and hardened React components for production.
-    \item \textbf{Payment \& Billing + Online Learning Platform}: Modeled DB with Prisma; managed schema migrations and transactions; implemented repository/service layers to ensure data integrity. Stack: NestJS, TypeScript, Prisma, PostgreSQL.
-    \item \textbf{AI Fashion Project}: Developed REST APIs for model invocations, job management, and status tracking using FastAPI. Integrated Supabase authentication \& storage; enforced signed URLs and access policies. Built async workflows and queuing for long-running jobs. Deployed on GCP.
+    \item \textbf{Full-Stack Development for Multiple AI Products}: Defined service boundaries, API contracts, and inter-service communication (HTTP/queues) in a microservice architecture. Used FastAPI, Django, Node.js, TypeScript, Prisma across products. Built event-driven workflows and serverless functions on AWS Lambda. Rapidly shipped UI with Vercel V0 and hardened React components for production. Used Cloudflare workers, AWS Step functions, AWS Lambda, AWS API Gateway, Vercel. 
+    \item \textbf{Payment \& Billing + Online Learning Platform}: Modeled DB with Prisma; managed schema migrations and transactions; implemented repository/service layers to ensure data integrity. Stack: NestJS, TypeScript, Prisma, PostgreSQL. Deployed on AWS, using EC2, RDS. 
+    \item \textbf{AI Fashion Project}: Developed REST APIs for model invocations, job management, and status tracking using FastAPI. Integrated Supabase authentication \& storage; enforced signed URLs and access policies. Built async workflows and queuing for long-running jobs. Hands-on backend work with FastAPI, PostgreSQL, several GCP services, GitHub Actions, Celery, RabbitMQ.
 \end{itemize}
 
 
@@ -82,7 +82,7 @@ Backend-heavy software engineer (7+ yrs) focused on AI products, and cloud-nativ
 \textbf{Databases:} MySQL, PostgreSQL, MongoDB\\
 \textbf{Frameworks:} Flask, FastAPI, Django, Node.js, NestJS, Prisma, TypeORM\\
 \textbf{Cloud/Tech:} Serverless Framework, AWS (S3, SNS, EC2, API Gateway, Lambda, RDS, CodeCommit, CloudWatch)\\
-\textbf{Other:} Celery, Redis, RabbitMQ, GitHub Actions, Sentry, CAN Bus\\
+\textbf{Other:} Celery, Redis, RabbitMQ, GitHub Actions, Sentry, CAN Bus, MQTT\\
 \textbf{Language Proficiency:} English (IELTS 6.5)
 
 \section{Volunteer}
